# LambdaLib2

./: .gitignore  .travis.yml  README.md  build.gradle  gradle.properties
docs/: ShaderSpec.md
gradle/wrapper/: gradle-wrapper.properties
src/editor/cpp/: .gitignore  CMakeLists.txt  _build_win64.bat  _gen_binding.bat  _workspace_win64.bat  cn_lambdalib2_vis_editor_ImGui.cpp  cn_lambdalib2_vis_editor_ImGui.h
src/main/java/cn/lambdalib2/: CorePlugin.java  LambdaLib2.java  ModContainer.java
src/main/java/cn/lambdalib2/auxgui/: AuxGui.java  AuxGuiHandler.java  OpenAuxGuiEvent.java
src/main/java/cn/lambdalib2/cgui/: CGui.java  CGuiScreen.java  CGuiScreenContainer.java  HierarchyDebugger.java  Widget.java  WidgetContainer.java
src/main/java/cn/lambdalib2/crafting/: CustomMappingHelper.java  (+8 more)
src/main/resources/: mcmod.info  pack.mcmeta
src/test/resources/cgui/: terminal.xml
src/test/resources/render/: free-look.glsl  free-look.shader  hello-tri.shader  instancing.glsl  test-texture.shader  test.shader
src/testeditor/src/: TestImGui.kt
src/testmod/: xconf.json
src/testmod/java/cn/ll2test/: RegistrationHelper.java  TestDebugDraw.java  TestLoadCallback.java  TestMod.java
xconf-generator/: build.gradle  settings.gradle
xconf-generator/src/main/kotlin/: ConfigExt.kt  Main.kt
xconf-generator/src/main/resources/: advClassTemplate.java  advJsonTemplate.json  blockClassTemplate.java  itemClassTemplate.java
xconf-generator/src/testexec/: .gitignore  xconf.json
xconf-generator/src/testexec/src/raw/: advs.conf  blocks.conf  blocks.json  items.conf  items.json
(+222 files in other folders)
